Integrate Blake’s changes

--- a/CARE_andorka.html
+++ b/CARE_andorka.html
@@ -61,12 +61,12 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
-<div class="container-fluid">
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
 
-    <div class="row"> <!-- (this starts the container-fluid tag) -->
+<div class="row-content">
 
-        <div class="col-sm-1 col-general"></div>
-        <div class="col-xs-12 col-sm-7 col-general">
+<div class="row top-buffer">
+        <div class="col-xs-12 col-sm-8 col-general">
 
 
             <!--  __________________________________________________________________________B E G I N    C O L U M N   A  ____________________________________________________________________________________ -->
@@ -152,7 +152,7 @@
         </div>
         <!--  __________________________________________________________________________B E G I N    C O L U M N    B ____________________________________________________________________________________ -->
 
-        <div class="hidden-xs col-sm-4 col-general">
+        <div class="col-xs-12 col-sm-4 col-general">
 
             <!--  ___________________________________________________________________________________ C O N T E N T   H E R E________________________________________________________________________________________ -->
 
@@ -162,54 +162,54 @@
 
 
             <P><BR><a href="CARE_dannenmaier.html" class="a_class_lists">Laura Dannenmaier, LCSW</A>
-                <BR><span class="bodytext">CMHC Assistant Director for CARE
-<BR>School of Architecture</span>
+                <BR><span class="bodytext">CMHC Assistant Director for CARE 
+<BR>School of Architecture
             </P>
 
 
             <P><BR><a href="CARE_andorka.html" class="a_class_lists">Mike Andorka, PhD</A>
                 <BR><span class="bodytext">Dell Medical School 
 <BR>School of Nursing 
-<BR>School of Social Work</span>
+<BR>School of Social Work
             </P>
 
 
             <P><BR><a href="CARE_evans.html" class="a_class_lists">Aaron Evans, LPC</A>
-                <BR><span class="bodytext">College of Liberal Arts</span>
+                <BR><span class="bodytext">College of Liberal Arts
             </P>
 
 
             <P><BR><a href="CARE_leblanc.html" class="a_class_lists">Toby Leblanc, LPC-S</A>
                 <BR><span class="bodytext">College of Education 
-<BR>McCombs School of Business</span>
+<BR>McCombs School of Business
             </P>
 
 
             <P><BR><a href="CARE_pinon.html" class="a_class_lists">Bernadette Pinon, LPC-S</A>
                 <BR><span class="bodytext">School of Undergraduate Studies 
-<BR>Division of Housing and Food Service</span>
+<BR>Division of Housing and Food Service
             </P>
 
 
             <P><BR><a href="CARE_simpson.html" class="a_class_lists">Abby Simpson, LCSW</A>
                 <BR><span class="bodytext">College of Fine Arts 
-<BR>Moody College of Communication</span>
+<BR>Moody College of Communication
             </P>
 
 
             <P><BR><a href="CARE_wade.html" class="a_class_lists">Jeni Wade, LCSW</A>
-                <BR><span class="bodytext">Cockrell College of Engineering</span>
+                <BR><span class="bodytext">Cockrell College of Engineering
             </P>
 
 
             <P><BR><a href="CARE_trinh.html" class="a_class_lists">Amy Trinh, LPC</A>
-                <BR><span class="bodytext">College of Natural Sciences</span>
+                <BR><span class="bodytext">College of Natural Sciences
             </P>
 
 
             <BR><P><span class="bodytext"><B>For more information about the CARE Program contact:</B>
 
-<BR>Laura Dannenmaier, LCSW  <a href="tel:1-512-471-3115" title="Phone" class="a_class_phonesm"> (512) 471-3115</A></span>
+<BR>Laura Dannenmaier, LCSW  <a href="tel:1-512-471-3115" title="Phone" class="a_class_phonesm"> (512) 471-3115</A>
         </P>
 
 
@@ -221,7 +221,7 @@
 
 
 
-
+</div>
         </div>
     </div>
 
