--- a/afriend.html
+++ b/afriend.html
@@ -58,9 +58,11 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+
 <div class="row-content">
 
-	<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+<div class="row top-buffer">	
 
 		<H1 class="H1">When a Friend is in Distress</H1>
 
@@ -75,8 +77,8 @@ itself in a number of ways. Although the following list is by no means all-inclu
 should suspect that a person might be distressed if any of the following apply to him / her:    
 </span></P>
 
-		<div class="bodytext">
-			<ul type="disc">
+		
+			<ul type="disc"><span class="bodytext">
 				<li>Trouble sleeping  </li>
 				<li>Vague physical aches and pains and / or lack of energy </li>
 				<li>Loss of interest in activities that s/he once enjoyed  </li>
@@ -91,7 +93,7 @@ should suspect that a person might be distressed if any of the following apply t
 				<li>Self-injury (cutting; scratching; burning)  </li>
 				<li>Unusual or exaggerated response to events (e.g., overly suspicious; overly agitated; easily startled)  </li>
 			</ul>
-		</div>
+	
 
 		<H2 class="H2">How to help:</H2>
 		<P><span class="bodytext">Below are a number of suggestions about what to do for a distressed
@@ -192,8 +194,8 @@ about how to handle a crisis situation, you can always enlist the help of the Be
 
 
 
-
-		<!--  __________________________________________________________________________E N D   C O L U M N   A ____________________________________________________________________________________ -->
+</div>
+		
 	</div>
 
 </div>
