--- a/buildingfriendships.html
+++ b/buildingfriendships.html
@@ -61,9 +61,11 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+
 <div class="row-content">
 
-    <div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+<div class="row top-buffer">	
 
         <H1 class="H1">Building Friendships</H1>
 
@@ -99,7 +101,7 @@
 
         <P><span class="bodytext">Brainstorm about what has helped you make friends in the past. Maybe you met all your old best friends in your faith community; perhaps finding a similar context in the UT-Austin area will be an important step for creating ties in your new environment. Think about your values (such as social justice) and interests (like creative writing). Do some research on student organizations and other groups and activities centered on those topics. Here are a few ideas to get you started:</span></P>
 
-        <ul class="bodytext">
+        <ul class="bodytext"><span class="bodytext">
             <li><a href="https://utexas.collegiatelink.net/Organizations" class="a_class_tlink">HornsLink</a>: A Directory of all student organizations at UT.  You can browse the many student orgs listed to find something that jumps out at you, OR search specific interests by keyword (e.g., anime, feminist, soccer). </li>
             <li><a href=" http://www.utrecsports.org/intramurals" class="a_class_tlink">UT Intramural Sports</a>. Scroll down the page to view the mens, womens, and co-ed leagues, as well as special events and tournaments offered by the Intramural Sports Program. Both team and individual sports are available. </li>
             <li>Volunteer opportunities at the <a href="http://ddce.utexas.edu/civicengagement/" class="a_class_tlink">Longhorn Center for Civic Engagement</a> webpage and their <a href="http://www.utvolunteers.org" class="a_class_tlink">online database of upcoming volunteering events</a>.</li>
@@ -109,7 +111,7 @@
         <H2 class="H2">Conversation starters</H2>
         <P><span class="bodytext">Okay, youve taken steps to put yourself in a new situation with new people. Now what? Approaching a stranger and attempting to strike up a conversation from thin air can take just as much bravery as getting yourself to an unfamiliar event in the first place. Try some of these ideas for initiating that first interaction with someone new.  Dont worry about trying all of these in one conversation; rather, choose one or two techniques to practice the next time youre getting to know someone:</span></P>
 
-        <ul class="bodytext">
+        <ul class="bodytext"><span class="bodytext">
             <li><B>Focus the conversation somewhat more on the other person.</B> Most people like talking about themselves. Asking questions also helps you figure out if this person might be friendship material for you. Be careful, though, not to focus SO much on the person that it begins to feel intrusive or interrogative. The best conversations are 2-sided. </li>
             <li><B>Offer a genuine compliment.</B> Try to compliment something the person did (You gave a great presentation in class! How did you get so good at public speaking?) or something that might connect to a shared interest (I love your shirt. Did you get that at Comic Con?). </li>
             <li><B>Use open-ended questions thatll keep the conversation going.</B> For example, What fun things are you finding to do in Austin as opposed to Do you like Austin? (which may just lead to a yes and the end of the interaction).</li>
