--- a/comingout.html
+++ b/comingout.html
@@ -18,7 +18,7 @@
     <!--  __________________________________________________________________________E N D   P A G E    T I T L E    A N D    M E T A    T A G G I N G  ____________________________________________________________________________________ -->
 
 
-    <!-- Bootstrap -->
+   <!-- Bootstrap -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="common.css">
 
@@ -59,10 +59,11 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+
 <div class="row-content">
 
-    <div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
-
+<div class="row top-buffer">	
         <H1 class="H1">LGBTQ - Frequently Asked Questions about Coming Out</H1>
 
         <span class="bodytext"><B>CMHC Business Hours:</B><BR>Monday thru Friday, 8:00am - 5:00pm
