--- a/contactcmhc.html
+++ b/contactcmhc.html
@@ -7,8 +7,8 @@
 
     <!--  __________________________________________________________________________P A G E    T I T L E    A N D    M E T A    T A G G I N G  ____________________________________________________________________________________ -->
 
-    <TITLE>CMHC - Usage statement</TITLE>
-    <META name="KeyWords" content="copyright, usage statement,">
+    <TITLE>Contact CMHC</TITLE>
+    <META name="KeyWords" content="Counseling and Mental Health Center, University of Texas, Austin, health, SSB, University Health Services,">
     <link href="bodytext.css" rel="stylesheet" type="text/css">
 
 
@@ -18,7 +18,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0">
 
     <!--  __________________________________________________________________________E N D   P A G E    T I T L E    A N D    M E T A    T A G G I N G  ____________________________________________________________________________________ -->
-
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
@@ -67,23 +66,87 @@
 
 <div class="row top-buffer">
 
-        <H1 class="H1">Usage Statement</H1>
+        <H1 class="H1">Contact CMHC</H1>
 
         <span class="bodytext"><B>Business Hours:</B><BR>Monday thru Friday, 8:00am - 5:00pm<BR>Appointment-Scheduling hours are Monday through Friday, 8:00am-12:00pm & 1:00pm-4:00pm
 <BR><span class="bodytext"><B>Phone:</B><a href="tel:1-512-471-3515" title="Phone" class="a_class_phonesm"> (512) 471-3515</A> -  <a href="http://facilitiesservices.utexas.edu/buildings/UTM/0980" class="a_class_tlink">Student Services Building</A> 5th Floor</span>
 <BR><img src="images/universal/naviconlinevav.png" alt="graphic element used to separate content" width="280" height="1" vspace="5" border="0" />
 
 
-<P><span class="bodytext">Copyright held by The University of Texas at Austin
-</span></P>
-<P><span class="bodytext">Material on this site may be linked to, quoted or reproduced for educational purposes without prior permission, provided appropriate credit is given. Any commercial use of this material is prohibited without prior permission from UT Counseling and Mental Health Center (CMHC). 
-</span></P>
-<P><span class="bodytext">When crediting the use of portions of our site or materials within it copyrighted by CMHC, please use: "Used by permission UT Counseling and Mental Health Center, The University of Texas at Austin."
 
-</span></P>
-<P><span class="bodytext">If you quote materials posted on our site that are in the public domain, we would appreciate you giving this site credit with the phrase: "Courtesy UT Counseling and Mental Health Center, The University of Texas at Austin."
 
- <BR><BR>
+
+<P><span class="bodytext"><B>CMHC Crisis Line:  
+</B><BR><a href="tel:1-512-471-2255" title="Phone" class="a_class_phonesm">512-471-CALL</A> (2255) (UT Students Only)
+</span></P>
+
+<P><span class="bodytext"><B>Appointments / Cancellations:</B><BR>
+<a href="tel:1-512-471-3515" title="Phone" class="a_class_phonesm">(512) 471-3515</A></span></P>
+
+<ul type="disc"><span class="bodytext">
+	<li>Schedule an appointment</li>
+	
+
+	<li>Cancel or reschedule an appointment (There is a $25 fee for missed or cancelled appointments that are not cancelled 24 hours prior to the day of the appointment.)
+ </li>
+<li><A HREF="charges.html" class="a_class_tlink">More Information on Fees </A></li>
+	<li>Inquire about our services</li>
+	<li>Contact one of our
+psychologists, social workers, psychiatrists, counselors, or other
+staff members</li>
+</span></ul></P>
+
+
+            <P><span class="bodytext"><B>Request for Release of Records:
+</B><BR><a href="tel:1-512-475-6946" title="Phone" class="a_class_phonesm">(512) 475-6946</A>
+</span></P>
+<P><span class="bodytext"><B>Director's Office:  
+</B><BR><a href="tel:1-512-475-6990" title="Phone" class="a_class_phonesm">(512) 475-6990</A>
+</span></P>
+<P><span class="bodytext"><B>CMHC Human Resources Representative:  
+</B><BR><a href="tel:1-512-475-69955" title="Phone" class="a_class_phonesm">(512) 475-6995</A>
+</span></P>
+
+<P><span class="bodytext"><B>Contact CMHC by US Mail:</B>
+<BR>
+The University of Texas at Austin 
+<BR>Counseling and Mental Health Center 
+<BR>100 W Dean Keeton St STOP A3500 
+<BR>Austin TX 78712-1099
+</span></P>
+
+
+
+
+
+<P><span class="bodytext"><B>Contact CMHC by Campus Mail:
+</B><BR>
+Counseling and Mental Health Center<BR>
+Campus Code:  A3500
+</span></P>
+
+<table border="1" BORDERCOLOR="#cccccc" width="100%" cellpadding="10">
+<TR><TD><H2 class="H2">Campus Carry</H2>
+<span class="bodytext2">The concealed carry of handguns is prohibited in patient care areas at UT Austin, including those areas in which professional mental health services are provided. Because a significant majority of the Student Services Building (SSB) is devoted to patient care, the entire building is exempt from the concealed carry of handguns.
+</TD></TR>
+</table>
+
+
+<H2 class="H2">Send CMHC Your Feedback and Inquiries:</H2>
+
+<span class="bodytext">CMHC welcomes your feedback and inquiries about our services and our website. If you want to contact your CMHC counselor or psychiatrist, <B>please do so by telephone rather than using this form.</B> If your situation or concern is of an urgent or life-threatening nature, you should <B>NOT</B> use this form and instead refer to the <a href="crisishelp.html" class="a_class_tlink">Crisis Help</A> page.
+    </P><P><span class="bodytext">Please note that the information that you provide will be transmitted over a non-secure channel, and thus you should not submit any personal or confidential information through the feedback form.
+<P><BR><a href="https://utexas.qualtrics.com/SE/?SID=SV_6Gyhp7b1lOG5SiF" target="blank"><img src="images/universal/button_feedback.png" alt="send your feedback" width="194" height="89" border="0" /> </a> 
+
+
+
+
+
+
+
+
+
+
     </div>
     <!--  __________________________________________________________________________E N D   C O L U M N   A ____________________________________________________________________________________ -->
 </div>
