--- a/diversity.html
+++ b/diversity.html
@@ -61,9 +61,11 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+
 <div class="row-content">
 
-	<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+<div class="row top-buffer">
 
 		<H1 class="H1">Diversity at CMHC</H1>
 
