--- a/event_walkerinitiative.html
+++ b/event_walkerinitiative.html
@@ -66,13 +66,16 @@
 
 	  	<div class="row hidden-xs">	
 	<div class="col-sm-100%  hidden-xs"><br/><br/>
-	    	<img src="images/campus.png" class="img-responsive" alt="ut campus" border="0" ></A>
+	    	<img src="images/campus.png" class="img-responsive" alt="ut campus" border="0" width="100%" />
 	  	</div>
         
 	  	</div>
 	  	
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+
 <div class="row-content">
-<div class="container-fluid"><!-- (this starts the container-fluid tag) -->
+
+<div class="row top-buffer">
 	
 	
     <!--  __________________________________________________________________________B E G I N    C O L U M N   A  ____________________________________________________________________________________ -->
