--- a/forms.html
+++ b/forms.html
@@ -60,9 +60,11 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+
 <div class="row-content">
 
-    <div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+<div class="row top-buffer">
 
         <H1 class="H1">Forms</H1>
 
@@ -71,13 +73,13 @@
 <BR><img src="images/universal/naviconlinevav.png" alt="graphic element used to separate content" width="280" height="1" vspace="5" border="0" />
 
 
-<DIR><A HREF="pdf/minorconsent.pdf" class="a_class_hlink">Consent for Treatment of a Minor </A><BR>
+<P><A HREF="pdf/minorconsent.pdf" class="a_class_hlink">Consent for Treatment of a Minor </A><BR>
 <BR><A HREF="http://healthyhorns.utexas.edu/medicalwithdrawals.html" class="a_class_hlink">Medical Withdrawals/Course Load Reduction</A><BR>
 <BR><A HREF="https://utexas.qualtrics.com/jfe/form/SV_bfjk1yWvJHfIHaZ" class="a_class_hlink">CMHC Voices Against Violence Theatre for Dialogue Program Application </A><BR>
 <BR><A HREF="https://docs.google.com/forms/d/1JzYGCJEcLXFvV1nzZkwUtjoFcHD7fnoscx1Pm9XhnV0/viewform" class="a_class_hlink">Student Advisory Committee Application </A><BR>
 <BR><A HREF="release.pdf" class="a_class_hlink">Authorization to Receive or Release Information </A>
 
-</DIR>
+</P>
 
 
 
