--- a/include_universalfooter.html
+++ b/include_universalfooter.html
@@ -5,7 +5,7 @@
 	<div class="container-fluid"><!-- (this starts the container-fluid tag) -->
 
 		<div class="col-sm-4 col-xs-12"> <!-- :::::::::::::::: first column in footer ::::::::::::::::::::::: -->
-			<br/><br/> <img src="images/universal/stafficon.png" alt="meet the staff" width="192" hspace="15" vspace="3"  class="img-responsive" align="top" />
+			<br/><br/> <img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/stafficon.png" alt="meet the staff" width="192" hspace="15" vspace="3"  class="img-responsive" align="top" />
 
 
 			<div class="row row-nested-space">
@@ -50,7 +50,7 @@
 				<div class="col-xs-12">
 					<br/>
 					<center>
-						<a href="https://utdirect.utexas.edu/apps/utgiving/online/nlogon/?menu1=VSCN"><img src="images/universal/give.png" alt="give now to UT Counseling and Mental Health" class="img-responsive" /></a>
+						<a href="https://utdirect.utexas.edu/apps/utgiving/online/nlogon/?menu1=VSCN"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/give.png" alt="give now to UT Counseling and Mental Health" class="img-responsive" /></a>
 					</center>
 				</div>
 
@@ -60,7 +60,7 @@
 
 
 
-		<div class="col-sm-5 col-xs-12">   <!-- :::::::::::::::: middle column in footer ::::::::::::::::::::::: -->
+		<div class="col-sm-6 col-xs-12">   <!-- :::::::::::::::: middle column in footer ::::::::::::::::::::::: -->
 			<div class="row">
 
 			
@@ -72,22 +72,23 @@
 
 <div class="row">
 				<div class="col-sm-12 col-xs-12">
-					<div class="col-sm-5 col-xs-6 custom4">
-						<a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/contact.html">Contact CMHC</a>
+					<div class="col-sm-6 col-xs-6 custom4">
+						<a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/contactcmhc.html">Contact CMHC</a>
 						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/aboutcmhc.html">About CMHC</a>
 						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/questions.html">Questions & answers</a>
 						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/crisishelp.html">Crisis services</a>
+						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/charges.html">Charges</a>
 						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/getinvolved.html">Get involved</a>
 						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/confidentiality.html">Confidentiality</a>
 						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/diversity.html">Diversity</a>
 						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/aboutcmhc.html">Mission & vision</a>
-						
 						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/serviceextension_cmhc.html">Service extension fee</a>
 						<br/> <br/><a class="a_class_dropdown" href="https://www.healthyhorns.utexas.edu/medicalwithdrawals.html">Medical widthdrawals & course load reductions</a>
+						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/forms.html">Forms</a>
 					</div>
 
 
-					<div class="col-sm-7 col-xs-6 custom5">
+					<div class="col-sm-6 col-xs-6 custom5">
 						<a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/groups.html">Groups & Classes</a>
 						<br/> <br/> <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/mindbodylab.html">MindBody Lab</a>
 						<br/> <br/> <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/medications.html">Medication & psychiatric services</a>
@@ -95,30 +96,31 @@
 						<br/> <br/> <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/counseling_resources.html">Off-campus counseling & mental health services</a>
 						<br/> <br/> <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/researchconsortium.html">Research Consortium</a>
 						<br/> <br/> <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/graduatetraining.html">Graduate training programs</a>
+						<br/> <br/> <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/mediainterview.html">Media interviews</a>
 						<br/> <br/> <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/clearinghouse/index.html">Clearinghouse abstracts</a>
-						<br/> <br/><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/forms.html">Forms</a>
+						
 					</div>
 				</div>
 			</div>
-
 		</div><!-- :::::::::::::::: END middle column in footer ::::::::::::::::::::::: -->
 
 
-		<div class="col-sm-3 col-xs-12"><!-- :::::::::::::::: 3rd column in footer ::::::::::::::::::::::: -->
+		<div class="col-sm-2 col-xs-12"><!-- :::::::::::::::: 3rd column in footer ::::::::::::::::::::::: -->
 			<center>
-				<br/><br/><a href="index.html"><img src="images/universal/cmhcbranding.png" alt="UT's Counseling and Mental health center" align="top" class="img-responsive" width="190" hspace="15" /></a>
-				<br/><a href="thrive/index.html"><img src="images/universal/thrivelogo.png" alt="Thrive free iphone app" width="110"  class="img-responsive"  hspace="15" align="top" /></a>
-				<br/><a href="https://www.utexas.edu"><img src="images/universal/utlogo.png" alt="The University of Texas at Austin" width="150" hspace="15"  class="img-responsive" vspace="5" align="top" /></a>
-				<br/>
+				<br/><br/>
+				<br/><a href="https://www.utexas.edu"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/utlogo.png" alt="The University of Texas at Austin" width="150" hspace="15"  class="img-responsive" vspace="5" align="top" /></a>
+				<br/><a href="https://test.cmhc.utexas.edu/REDESIGN2017/thrive/index.html"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/thrivelogo.png" alt="Thrive free iphone app" width="120"  class="img-responsive"  hspace="0" align="top" /></a>
+				<br/><a href="index.html"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/cmhcbranding.png" alt="UT's Counseling and Mental health center" align="top" class="img-responsive" width="190" hspace="15" /></a>
+				<br/><br/><br/>
 			</center>
 
 			<div class="row">
 				<center>
 				<div class="visible-xs col-xs-2"></div>
-				<div class="col-sm-3 col-xs-2"><a href="https://www.facebook.com/utcmhc"><img src="images/universal/icon_footerfacebook.png" alt="facebook" width="40"/></a></div>
-				<div class="col-sm-3 col-xs-2"><a href="https://twitter.com/UT_CMHC"><img src="images/universal/icon_footertwitter.png" alt="twitter"  width="40"/></a></div>
-				<div class="col-sm-3 col-xs-2"><a href="https://www.instagram.com/UTaustinVAV/"><img src="images/universal/icon_footerinstagram.png" alt="instagram" width="40" /></a></div>
-				<div class="col-sm-3 col-xs-2"><a href="https://www.youtube.com/user/TheCMHC"><img src="images/universal/icon_footeryoutube.png" alt="youtube" width="40" /></a></div>
+				<div class="col-sm-3 col-xs-2"><a href="https://www.facebook.com/utcmhc"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_footerfacebook.png" alt="facebook" width="30"/></a></div>
+				<div class="col-sm-3 col-xs-2"><a href="https://twitter.com/UT_CMHC"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_footertwitter.png" alt="twitter"  width="30"/></a></div>
+				<div class="col-sm-3 col-xs-2"><a href="https://www.instagram.com/UTaustinVAV/"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_footerinstagram.png" alt="instagram" width="30" /></a></div>
+				<div class="col-sm-3 col-xs-2"><a href="https://www.youtube.com/user/TheCMHC"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_footeryoutube.png" alt="youtube" width="30" /></a></div>
 				<div class="visible-xs col-xs-2"></div>
 				</center>
 			</div><!-- :::::::::::::::: END 3rd column in footer ::::::::::::::::::::::: -->
@@ -135,11 +137,11 @@
 			<center><br/><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/greyfooterline.jpg" alt="graphic element used to separate sections of content" width="100%" height="1" align="top" /></center>
 		</div>
 				<div class="col-sm-6 col-xs-12">
-					<BR><BR><a href="https://test.cmhc.utexas.edu/REDESIGN2017/vav/index.html"><img src="images/universal/vavlogo_footer.png" alt="voices against violence"  vspace="0" class="img-responsive" /></a>
+					<BR><BR><a href="https://test.cmhc.utexas.edu/REDESIGN2017/vav/index.html"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/vavlogo_footer.png" alt="voices against violence"  vspace="0" class="img-responsive" /></a>
 				</div>
 
 				<div class="col-sm-6 col-xs-12">
-					<BR><BR><a href="https://test.cmhc.utexas.edu/REDESIGN2017/bethatone/index.html"><img src="images/universal/btologo_footer.png" alt="Be That One UT's suicide prevention program" width="700" height="100" vspace="0" class="img-responsive" /></a>
+					<BR><BR><a href="https://test.cmhc.utexas.edu/REDESIGN2017/bethatone/index.html"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/btologo_footer.png" alt="Be That One UT's suicide prevention program" width="700" height="100" vspace="0" class="img-responsive" /></a>
 				</div>
 			</div>
 		</div>
