--- a/include_universalheader.html
+++ b/include_universalheader.html
@@ -2,19 +2,19 @@
 <div class="row row-top-grey" style="width:inherit;margin:inherit;">
 	<div class="container-fluid"><!-- (this starts the container-fluid tag) -->
 		<div class="col-xs-6 col-sm-3">
-			<a href="http://www.utexas.edu/"><img src="images/universal/utlogo.png" class="img-responsive" alt="The University of Texas at Austin - What Starts Here Changes The World" border="0"></a>
+			<a href="http://www.utexas.edu/"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/utlogo.png" class="img-responsive" alt="The University of Texas at Austin - What Starts Here Changes The World" border="0"></a>
 		</div>
 
 
 		<div class="col-xs-4 col-sm-2">
-			<a href="https://www.utexas.edu/student-affairs"><img src="images/universal/dsalogo.png" class="img-responsive" alt="The University of Texas at Austin Division of Student Affairs" border="0"></a>
+			<a href="https://www.utexas.edu/student-affairs"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/dsalogo.png" class="img-responsive" alt="The University of Texas at Austin Division of Student Affairs" border="0"></a>
 		</div>
 
-		<div class="hidden-xs hidden-sm col-md-3" style="margin-top: 40px">&nbsp; <a class="a_class_dropdown" href="aboutcmhc.html">About CMHC</a> <span class="orangetext">&nbsp;l&nbsp;</span> <a class="a_class_dropdown" href="contactcmhc.html">Contact</a></span>
+		<div class="hidden-xs hidden-sm col-md-3" style="margin-top: 40px">&nbsp; <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/aboutcmhc.html">About CMHC</a> <span class="orangetext">&nbsp;l&nbsp;</span> <a class="a_class_dropdown" href="contactcmhc.html">Contact</a></span>
 		</div>
 
 		<div class="col-xs-2 visible-xs" style="margin-top: 15px">
-			<img src="images/universal/hamburgericon.png" id="mobile-search-btn" alt="search" style="height: 26px;top: 10px;right: 20px;position: absolute;cursor:pointer" />
+			<img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/hamburgericon.png" id="mobile-search-btn" alt="search" style="height: 26px;top: 10px;right: 20px;position: absolute;cursor:pointer" />
 		</div> 
 
 		 <div class="cse-branding-bottom hidden-xs col-sm-4 search-container" style="margin-top: 8px">  
@@ -22,7 +22,7 @@
 				<input type="hidden" name="cx" value="011526861309857669012:ptgfi3yl6li" /> 
 				<input type="hidden" name="cof" value="FORID:11" />
 				<input type="text" class="search-input" name="q" placeholder="search..."> 
-				<input type="image" class="search-btn" type="submit" src="images/universal/searchicon.png" border="0" alt="Submit"/> 
+				<input type="image" class="search-btn" type="submit" src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/searchicon.png" border="0" alt="Submit"/> 
 			</form>
 
 
@@ -41,7 +41,7 @@
 				<input type="hidden" name="cx" value="011526861309857669012:ptgfi3yl6li" /> 
 				<input type="hidden" name="cof" value="FORID:11" />
 				<input type="text" class="search-input" name="q" placeholder="search..."> 
-				<input type="image" class="search-btn" type="submit" src="images/universal/searchicon.png" style="left:115px!important" border="0" alt="Submit"/> 
+				<input type="image" class="search-btn" type="submit" src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/searchicon.png" style="left:115px!important" border="0" alt="Submit"/> 
 			</form>
 		</div>    
 	</center>
@@ -58,7 +58,7 @@
 
 
 		<div class="col-xs-12 col-sm-4 custom3 hidden-xs">
-			<a href="index.html"><center><img src="images/universal/cmhcbranding.png" class="img-responsive" alt="cmhc.utexas.edu" border="0" vspace="0" align="middle" /></center></a>
+			<a href="https://test.cmhc.utexas.edu/REDESIGN2017/index.html"><center><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/cmhcbranding.png" class="img-responsive" alt="cmhc.utexas.edu" border="0" vspace="0" align="middle" /></center></a><br/><br/>
 		</div>
 
 		<div class=" col-md-8 hidden-xs" align="left"><br/><br/><br/>
@@ -66,11 +66,11 @@
 			<center><span class="homepageheader hidden-xs">&nbsp;We'll help you figure it out.</span></center>
 			<div class="row hidden-md">
 			</div>
-			<div class="col-sm-1 hidden-xs"><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/contact.html"><img src="images/universal/icon_phone.png"  class="img-responsive" alt="contact cmhc - 512-471-3515 monday thru friday 8am-5pm" vspace="30" /></a></div>
+			<div class="col-sm-1 hidden-xs"><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/contact.html"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_phone.png"  class="img-responsive" alt="contact cmhc - 512-471-3515 monday thru friday 8am-5pm" vspace="30" /></a></div>
 			<div class="col-sm-4 custom7 hidden-xs"><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/contact.html">&nbsp;<B>512-471-3515</B><br/>&nbsp;Mon. - Fri. &nbsp;8am-5pm</a></div>
-			<div class="col-sm-1 hidden-xs"><a class="a_class_dropdown" href="http://facilitiesservices.utexas.edu/buildings/UTM/0980"><img src="images/universal/icon_location.png"  class="img-responsive" alt="CMHC campus location" hspace="0" vspace="30" /></a></div>
+			<div class="col-sm-1 hidden-xs"><a class="a_class_dropdown" href="http://facilitiesservices.utexas.edu/buildings/UTM/0980"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_location.png"  class="img-responsive" alt="CMHC campus location" hspace="0" vspace="30" /></a></div>
 			<div class="col-sm-3 custom7 hidden-xs"><a class="a_class_dropdown" href="http://facilitiesservices.utexas.edu/buildings/UTM/0980">&nbsp;Campus <br/>&nbsp;Location</a></div>
-			<div class="col-sm-1 hidden-xs"><a class="a_class_dropdown" href="https://portal.uhs.utexas.edu/login_directory.aspx"><img src="images/universal/icon_mycmhc.png"  class="img-responsive" alt="MyCMHC" hspace="0" vspace="30" /></a></div>
+			<div class="col-sm-1 hidden-xs"><a class="a_class_dropdown" href="https://portal.uhs.utexas.edu/login_directory.aspx"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_mycmhc.png"  class="img-responsive" alt="MyCMHC" hspace="0" vspace="30" /></a></div>
 			<div class="col-sm-2 custom6 hidden-xs"><a class="a_class_dropdown" href="https://portal.uhs.utexas.edu/login_directory.aspx">&nbsp;MyCMHC</a></div>
 		</div>
 	</div>
@@ -108,7 +108,7 @@
 					<tr>
 						<td width="20"></TD>
 						<td  valign="middle" width="70">
-							<a href="https://test.cmhc.utexas.edu/REDESIGN2017/contact.html"><img src="images/universal/icon_phone.png" class="img-responsive" alt="contact cmhc - 512-471-3515 monday thru friday 8am-5pm" /></a>
+							<a href="https://test.cmhc.utexas.edu/REDESIGN2017/contact.html"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_phone.png" class="img-responsive" alt="contact cmhc - 512-471-3515 monday thru friday 8am-5pm" /></a>
 						</td>
 						<td align="left" valign="middle"><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/contact.html"><B>512-471-3515</B><br/>Monday - Friday 8am-5pm</a>
 						</td>
@@ -123,7 +123,7 @@
 					<tr>
 						<td width="20"></TD>
 						<td valign="middle" width="70"><a class="a_class_dropdown" href="aboutcmhc.html">
-							<a href="http://facilitiesservices.utexas.edu/buildings/UTM/0980"><img src="images/universal/icon_location.png" class="img-responsive" alt="CMHC campus location" /></a>
+							<a href="http://facilitiesservices.utexas.edu/buildings/UTM/0980"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_location.png" class="img-responsive" alt="CMHC campus location" /></a>
 						</td>
 						<td align="left" valign="middle">
 							<a class="a_class_dropdown" href="http://facilitiesservices.utexas.edu/buildings/UTM/0980">Campus Location</a>
@@ -139,7 +139,7 @@
 					<tr>
 						<td width="20"></TD>
 						<td valign="middle" width="70">
-							<a class="a_class_dropdown" href="https://portal.uhs.utexas.edu/login_directory.aspx"><img src="images/universal/icon_mycmhc.png" class="img-responsive" alt="mycmhc" /></a>
+							<a class="a_class_dropdown" href="https://portal.uhs.utexas.edu/login_directory.aspx"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_mycmhc.png" class="img-responsive" alt="mycmhc" /></a>
 						</td>
 						<td align="left" valign="middle">
 							<a class="a_class_dropdown" href="https://portal.uhs.utexas.edu/login_directory.aspx">MyCMHC</a>
@@ -192,6 +192,7 @@
 							<a href="https://test.cmhc.utexas.edu/REDESIGN2017/vav/vav_relationshipviolence.html"class="a_class_dropdown">Dating & Relationship Violence</a>
 							<a href="https://test.cmhc.utexas.edu/REDESIGN2017/depression.html"class="a_class_dropdown">Depression</a>
 							<a href="https://test.cmhc.utexas.edu/REDESIGN2017/mindfuleating.html#1"class="a_class_dropdown">Eating Disorders</a>
+							<a href="https://test.cmhc.utexas.edu/REDESIGN2017/fightingfair.html"class="a_class_dropdown">Fighting Fair to Resolve Conflict</a>
 							<a href="https://test.cmhc.utexas.edu/REDESIGN2017/gambling.html"class="a_class_dropdown">Gambling</a>
 							<a href="https://test.cmhc.utexas.edu/REDESIGN2017/griefloss.html"class="a_class_dropdown">Grief & Loss</a>
 							<a href="https://test.cmhc.utexas.edu/REDESIGN2017/vav/vav_healthyrelationships.html"class="a_class_dropdown">Healthy Relationships</a>
@@ -228,7 +229,7 @@
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/alcoholdrugs.html"class="a_class_dropdown">Alcohol and other drug program</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/medications.html"class="a_class_dropdown">Medication and psychiatric services</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/vav/vav_survivorservices.html"class="a_class_dropdown">Services for survivors of sexual assault</a>
-					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/CARE.html"class="a_class_dropdown">C.A.R.E. program</a>
+					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/CARE.html"class="a_class_dropdown">Counselors in Academic Residence Program (CARE)</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/diversitycoordinators.html"class="a_class_dropdown">Diversity coordinators</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/integratedhealth.html"class="a_class_dropdown">Integrated health</a>
 					<a href="https://test.cmhc.utexas.edu/REDESIGN2017/counseling_resources.html"class="a_class_dropdown">Off-campus counseling / mental health resources</a>
@@ -253,9 +254,9 @@
 		</div>
 	</div>
 
-	<div class="col-xs-12 visible-xs">
-		<a href="index.html"><center><img src="images/universal/cmhcbranding_mobile.png" class="img-responsive" alt="cmhc.utexas.edu" border="0" vspace="0" align="middle" /></center></a>
-	</div>
+	<div class="col-xs-12 visible-xs" style="margin-top: 20px">
+	<a href="https://test.cmhc.utexas.edu/REDESIGN2017/index.html"><center><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/cmhcbranding_mobile.png" class="img-responsive" alt="cmhc.utexas.edu" border="0" vspace="0" align="middle" /></center></a>
+</div>
 </div>
 <script>
 
