--- a/mindbodylab.html
+++ b/mindbodylab.html
@@ -60,132 +60,119 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+
 <div class="row-content">
 
-	<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+<div class="row top-buffer">
 
 		<H1 class="H1">MindBody Lab</H1>
 
 
 
-		<span class="bodytext"><B>Business Hours:</B><BR>Monday thru Friday, 8:00am - 4:30pm</span>
-		<BR><span class="bodytext"><B>Phone:</B><a href="tel:1-512-471-3515" title="Phone" class="a_class_phonesm"> (512) 471-3515</A> -  <a href="http://facilitiesservices.utexas.edu/buildings/UTM/0980" class="a_class_tlink">Student Services Building</A> 5th Floor</span>
-		<BR><img src="images/universal/naviconlinevav.png" alt="graphic element used to separate content" width="280" height="1" vspace="5" border="0" />
+<H2 class="H2">Campus Locations:</H2> 
+<P><span class="bodytext"> <a href="http://facilitiesservices.utexas.edu/buildings/UTM/0980" class="a_class_tlink"><B>Student Services Building (SSB), 5th floor</B></A>
+<BR/>Monday thru Friday, 8:00am - 4:30pm 
+<BR/>Phone: <a href="tel:1-512-471-3515" title="Phone" class="a_class_phonesm"> (512) 471-3515</A>  
+
+<P><span class="bodytext"> <a href="https://facilitiesservices.utexas.edu/buildings/UTM/0278" class="a_class_tlink"><B>Student Activity Center (SAC), 2.106</B></A><span class="bodytext_orange3"> (Opening November 28, 2016)</span>
+ 
+
+<BR/>Seven days a week, Monday-Friday 8am-8pm, Saturday 10am-8pm, Sunday noon-8pm
+<BR/>Check in at the hospitality desk on the 1st floor
 
 
-		<P><span class="bodytext"><B>No appointment necessary</B></span></P>
+<P><span class="bodytext"><B>No appointment necessary</B></span></P>
 
 
-		<H2 class="H2">MindBody Lab Tours</H2>
-		<P>
-			<span class="bodytext">
-			The MindBody Lab is available for tours from 8:00am-9:00am and 4:00pm-5:00pm daily by appointment only.  Because of the confidential nature of the Counseling and Mental Health Center, we are not able to accommodate groups that arrive without arranging an appointment ahead of time.  Please contact <a href="mailto:solis.rough@austin.utexas.edu" class="a_class_tlink">Solis Rough</A> to arrange a tour or call <a href="tel:1-512-475-6903" title="Phone" class="a_class_phonesm">512-475-6903.</A>
-			</span>
-		</P>
+<H2 class="H2">What is MindBody Lab?</H2>
+<P><span class="bodytext">The MindBody Lab is a self-paced environment designed to help UT students explore various resources for improving their emotional and physical health. The Lab currently features audio and video instruction on a variety of topics. Most of this material is experiential, enabling students to follow along and practice the skills as they are being discussed.
+</span></P>
+<P><span class="bodytext"><B>The MindBody Lab currently contains information and guided exercises on:</B>
+</span></P>
+<ul><span class="bodytext">
+	<li>Breathing Exercises</li>
+	<li>Muscle Relaxation</li>
+	<li>Meditation</li>
+	<li>Relaxation Imagery / Relaxation Sounds</li>
+	<li>Guided Imagery</li>
+	<li>Health & Well Being</li>
+	<li>Sleep Issues</li>
+	<li>Food & Body Image</li>
+</ul>
 
+<P><span class="bodytext"><B>We also offer the following tools for biofeedback:</B>
+<ul><span class="bodytext">
+	<li>Healing Rhythms (available in SSB only)</li>
+	<li>RESPeRATE (available in SSB and SAC)</li>
+	<li>Galvanic Skin Resistance 2 (GSR2) (available in SSB only)</li>
+	<li>emWave Personal Stress Reliever (available in SSB only)</li>
+</ul>
 
-
-		<H2 class="H2">What is MindBody Lab?</H2>
-		<P>
-			<span class="bodytext">
-				The MindBody Lab is a self-paced environment designed to help UT students explore various resources for improving their emotional and physical health. The Lab currently features audio and video instruction on a variety of topics. Most of this material is experiential, enabling students to follow along and practice the skills as they are being discussed.
-			</span>
-		</P>
-
-
-		<P><span class="bodytext"><B>The MindBody Lab currently contains information and guided exercises on:</B></span></P>
-
-
-		<ul class="bodytext" type="disc">
-			<li>Breathing Exercises</li>
-			<li>Muscle Relaxation</li>
-			<li>Meditation</li>
-			<li>Relaxation Imagery / Relaxation Sounds</li>
-			<li>Guided Imagery</li>
-			<li>Health & Well Being</li>
-			<li>Sleep Issues</li>
-			<li>Food & Body Image</li>
-		</ul>
-
-		<P><span class="bodytext"><B>We also offer the following tools for biofeedback:</B></span></P>
-
-		<ul class="bodytext" type="disc">
-			<li>Healing Rhythms </li>
-			<li>RESPeRATE </li>
-			<li>Galvanic Skin Resistance 2 (GSR2)</li>
-			<li>emWave Personal Stress Reliever</li>
-		</ul>
-
-
-		<P>
-			<span class="bodytext">
-				Please <a href="pdf/MBL MenuDevices.docx" class="a_class_tlink">click here</A> for a current menu of the content available in the lab.
-			</span>
-		</P>
-
-		</P>
-		<P>
-			<span class="bodytext">
-				<I>Please note that you will need a photo ID in order to check out equipment from the front reception desk.</I>
-			</span>
-		</P>
+</span></P>
+<P><span class="bodytext"><I>Please note that you will need a photo ID in order to check out equipment from the front reception desk.</I>
+</span></P>
+<H2 class="H2">MindBody Lab Tours in the Student Services Building (SSB)</H2>
+<P><span class="bodytext">The MindBody Lab is available for tours from 8:00am-9:00am and 4:00pm-5:00pm daily by appointment only. Because of the confidential nature of the Counseling and Mental Health Center, we are not able to accommodate groups that arrive without arranging an appointment ahead of time. Please contact <a href="mailto:solis.rough@austin.utexas.edu" class="a_class_tlink">Solis Rough</A> to arrange a tour or call <a href="tel:1-512-475-6903" title="Phone" class="a_class_phonesm"> 512-475-6903</A>.
+<BR/><BR/></span></P>
 
 
 
 
-		<H2 class="H2">Below is a sample of some of the content that you will find in the MindBody Lab. </H2>
-		<div class="row">
-			<div class="col-sm-8 col-xs-12">
-			<div class="row row-nested-space hidden-xs">
-				<div class="col-xs-12-audio hidden-xs">
-					<a class="btn-info-desktop btn-block custom" href="mbl_audio1.html">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="45" height="24" />Deep Breathing</a>
-				</div>
-
+		<!-- 
+<H2 class="H2">Below is a sample of some of the content that you will find in the MindBody Lab. </H2>
+		
+			
+			    <div class="row row-nested-space hidden-xs">
+				    <div class="col-xs-12-audio hidden-xs">
+					    <a class="btn-info-desktop btn-block custom" href="mbl_audio1.html"><div style="padding-top:4px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="45" height="24" />Deep Breathing</div></a>
+				    </div>
+</div>
 				<div class="row row-nested-space hidden-xs">
 					<div class="col-xs-12-audio hidden-xs">
-						<a class="btn-info-desktop btn-block custom" href="mbl_audio5.html">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="45" height="24" />3 Minute Breathing</a>
+						<a class="btn-info-desktop btn-block custom" href="mbl_audio5.html"><div style="padding-top:4px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="45" height="24" />3 Minute Breathing</div></a>
 					</div>
 				</div>
 
 				<div class="row row-nested-space hidden-xs">
 					<div class="col-xs-12-audio hidden-xs">
-						<a class="btn-info-desktop btn-block custom" href="mbl_audio6.html">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="45" height="24" />4-7-8 Breath</a>
+						<a class="btn-info-desktop btn-block custom" href="mbl_audio6.html"><div style="padding-top:4px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="45" height="24" />4-7-8 Breath</div></a>
 					</div>
 				</div>
 
 				<div class="row row-nested-space hidden-xs">
 					<div class="col-xs-12-audio hidden-xs">
-						<a class="btn-info-desktop btn-block custom" href="mbl_audio2.html">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="45" height="24" />Muscle Relaxation</a>
+						<a class="btn-info-desktop btn-block custom" href="mbl_audio2.html"><div style="padding-top:4px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="45" height="24" />Muscle Relaxation</div></a>
 					</div>
 				</div>
 
 				<div class="row row-nested-space hidden-xs">
 					<div class="col-xs-12-audio hidden-xs">
-						<a class="btn-info-desktop btn-block custom" href="mbl_audio7.html">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="45" height="24" />Progressive Muscle Relaxation</a>
+						<a class="btn-info-desktop btn-block custom" href="mbl_audio7.html"><div style="padding-top:4px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="45" height="24" />Progressive Muscle Relaxation</div></a>
 					</div>
 				</div>
 
 				<div class="row row-nested-space hidden-xs">
 					<div class="col-xs-12-audio hidden-xs">
-						<a class="btn-info-desktop btn-block custom" href="mbl_audio3.html">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="45" height="24"/>Cruise</a>
+						<a class="btn-info-desktop btn-block custom" href="mbl_audio3.html"><div style="padding-top:4px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="45" height="24"/>Cruise</div></a>
 					</div>
 				</div>
 
 				<div class="row row-nested-space hidden-xs">
 					<div class="col-xs-12-audio hidden-xs">
-						<a class="btn-info-desktop btn-block custom" href="mbl_audio4.html">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="45" height="24" />Forest</a>
+						<a class="btn-info-desktop btn-block custom" href="mbl_audio4.html"><div style="padding-top:4px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="45" height="24" />Forest</div></a>
 					</div>
 				</div>
 
 				<div class="row row-nested-space hidden-xs">
 					<div class="col-xs-12-audio hidden-xs">
-						<a class="btn-info-desktop btn-block custom" href="mbl_audio8.html">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0"  width="45" height="24"/>Body Scan</a>
+						<a class="btn-info-desktop btn-block custom" href="mbl_audio8.html"><div style="padding-top:4px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0"  width="45" height="24"/>Body Scan</div></a>
 					</div>
 				</div>
 
 				<div class="row row-nested-space hidden-xs">
 					<div class="col-xs-12-audio hidden-xs">
-						<a class="btn-info-desktop btn-block custom" href="mbl_audio9.html">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="45" height="24" />Sitting Meditation</a>
+						<a class="btn-info-desktop btn-block custom" href="mbl_audio9.html"><div style="padding-top:4px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="45" height="24" />Sitting Meditation</div></a>
 					</div>
 				</div>
 
@@ -193,58 +180,59 @@
 			</div>
 
 			<div class="row row-mobilebox-space hidden-md hidden-lg hidden-sm" >
-				<div class="col-xs-12-charges visible-xs hidden-md hidden-lg" style="padding:0px">
-					<a class="btn-info-main btn-block custom" style="background-image:url(images/universal/buttonbluebackground.png);width:100%;height:100%;"  href="mbl_audio1.html"><div style="padding-top:8px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>Deep Breathing</div></a>
+				<div class="col-xs-12-audio visible-xs hidden-md hidden-lg" style="padding:0px">
+					<a class="btn-info-main btn-block custom"  href="mbl_audio1.html"><div style="padding-top:8px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>Deep Breathing</div></a>
 				</div>
 			</div>
 
 			<div class="row row-mobilebox-space hidden-md hidden-lg hidden-sm" >
-				<div class="col-xs-12-charges visible-xs hidden-md hidden-lg" style="padding:0px">
-					<a class="btn-info-main btn-block custom" style="background-image:url(images/universal/buttonbluebackground.png);width:100%;height:100%;"  href="mbl_audio5.html"><div style="padding-top:8px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>3 Minute Breathing</div></a>
+				<div class="col-xs-12-audio visible-xs hidden-md hidden-lg" style="padding:0px">
+					<a class="btn-info-main btn-block custom"  href="mbl_audio5.html"><div style="padding-top:8px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>3 Minute Breathing</div></a>
 				</div>
 			</div>
 
 			<div class="row row-mobilebox-space hidden-md hidden-lg hidden-sm" >
-				<div class="col-xs-12-charges visible-xs hidden-md hidden-lg" style="padding:0px">
-					<a class="btn-info-main btn-block custom" style="background-image:url(images/universal/buttonbluebackground.png);width:100%;height:100%;"  href="mbl_audio6.html"><div style="padding-top:8px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>4-7-8 Breath</div></a>
+				<div class="col-xs-12-audio visible-xs hidden-md hidden-lg" style="padding:0px">
+					<a class="btn-info-main btn-block custom"  href="mbl_audio6.html"><div style="padding-top:8px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>4-7-8 Breath</div></a>
 				</div>
 			</div>
 
 			<div class="row row-mobilebox-space hidden-md hidden-lg hidden-sm" >
-				<div class="col-xs-12-charges visible-xs hidden-md hidden-lg" style="padding:0px">
-					<a class="btn-info-main btn-block custom" style="background-image:url(images/universal/buttonbluebackground.png);width:100%;height:100%;"  href="mbl_audio2.html"><div style="padding-top:8px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>Muscle Relaxation</div></a>
+				<div class="col-xs-12-audio visible-xs hidden-md hidden-lg" style="padding:0px">
+					<a class="btn-info-main btn-block custom"  href="mbl_audio2.html"><div style="padding-top:8px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>Muscle Relaxation</div></a>
 				</div>
 			</div>
 
 			<div class="row row-mobilebox-space hidden-md hidden-lg hidden-sm" >
-				<div class="col-xs-12-charges visible-xs hidden-md hidden-lg" style="padding:0px">
-					<a class="btn-info-small btn-block custom" style="background-image:url(images/universal/buttonbluebackground.png);width:100%;height:100%;"  href="mbl_audio7.html"><div style="padding-top:11px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>Progressive Muscle Relaxation</div></a>
+				<div class="col-xs-12-audio visible-xs hidden-md hidden-lg" style="padding:0px">
+					<a class="btn-info-small btn-block custom"  href="mbl_audio7.html"><div style="padding-top:11px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>Progressive Muscle Relaxation</div></a>
 				</div>
 			</div>
 
 			<div class="row row-mobilebox-space hidden-md hidden-lg hidden-sm" >
-				<div class="col-xs-12-charges visible-xs hidden-md hidden-lg" style="padding:0px">
-					<a class="btn-info-main btn-block custom" style="background-image:url(images/universal/buttonbluebackground.png);width:100%;height:100%;"  href="mbl_audio3.html"><div style="padding-top:8px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>Cruise</div></a>
+				<div class="col-xs-12-audio visible-xs hidden-md hidden-lg" style="padding:0px">
+					<a class="btn-info-main btn-block custom"  href="mbl_audio3.html"><div style="padding-top:8px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>Cruise</div></a>
 				</div>
 			</div>
 
 			<div class="row row-mobilebox-space hidden-md hidden-lg hidden-sm" >
-				<div class="col-xs-12-charges visible-xs hidden-md hidden-lg" style="padding:0px">
-					<a class="btn-info-main btn-block custom" style="background-image:url(images/universal/buttonbluebackground.png);width:100%;height:100%;"  href="mbl_audio4.html"><div style="padding-top:8px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>Forest</div></a>
+				<div class="col-xs-12-audio visible-xs hidden-md hidden-lg" style="padding:0px">
+					<a class="btn-info-main btn-block custom"  href="mbl_audio4.html"><div style="padding-top:8px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>Forest</div></a>
 				</div>
 			</div>
 
 			<div class="row row-mobilebox-space hidden-md hidden-lg hidden-sm" >
-				<div class="col-xs-12-charges visible-xs hidden-md hidden-lg" style="padding:0px">
-					<a class="btn-info-main btn-block custom" style="background-image:url(images/universal/buttonbluebackground.png);width:100%;height:100%;"  href="mbl_audio8.html"><div style="padding-top:8px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>Body Scan</div></a>
+				<div class="col-xs-12-audio visible-xs hidden-md hidden-lg" style="padding:0px">
+					<a class="btn-info-main btn-block custom"  href="mbl_audio8.html"><div style="padding-top:8px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>Body Scan</div></a>
 				</div>
 			</div>
 
 			<div class="row row-mobilebox-space hidden-md hidden-lg hidden-sm" >
-				<div class="col-xs-12-charges visible-xs hidden-md hidden-lg" style="padding:0px">
-					<a class="btn-info-main btn-block custom" style="background-image:url(images/universal/buttonbluebackground.png);width:100%;height:100%;"  href="mbl_audio9.html"><div style="padding-top:8px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>Sitting Meditation</div></a>
+				<div class="col-xs-12-audio visible-xs hidden-md hidden-lg" style="padding:0px">
+					<a class="btn-info-main btn-block custom"  href="mbl_audio9.html"><div style="padding-top:8px">&nbsp;&nbsp;&nbsp;<img src="images/universal/audio.png" alt="audio recording" border="0" width="35" height="20"/>Sitting Meditation</div></a>
 				</div><BR>
 			</div>
+ -->
 		</div>
 		</div>
 		<!--  __________________________________________________________________________E N D   C O L U M N   A ____________________________________________________________________________________ -->
