--- a/CARE_wade.html
+++ b/CARE_wade.html
@@ -61,11 +61,12 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
-<div class="container-fluid">
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
 
-    <div class="row"> <!-- (this starts the container-fluid tag) -->
-        <div class="col-sm-1 col-general"></div>
-        <div class="col-xs-12 col-sm-7 col-general">
+<div class="row-content">
+
+<div class="row top-buffer">
+        <div class="col-xs-12 col-sm-8 col-general">
 
 
             <!--  __________________________________________________________________________B E G I N    C O L U M N   A  ____________________________________________________________________________________ -->
@@ -144,7 +145,7 @@
         </div>
         <!--  __________________________________________________________________________B E G I N    C O L U M N    B ____________________________________________________________________________________ -->
 
-        <div class="hidden-xs col-sm-4 col-general">
+        <div class="col-xs-12 col-sm-4 col-general">
 
             <!--  ___________________________________________________________________________________ C O N T E N T   H E R E________________________________________________________________________________________ -->
 
@@ -212,7 +213,7 @@
 
 
 
-
+ </div>
 
         </div>
     </div>
