--- a/aboutcmhc.html
+++ b/aboutcmhc.html
@@ -18,6 +18,10 @@
 
     <!--  __________________________________________________________________________E N D   P A G E    T I T L E    A N D    M E T A    T A G G I N G  ____________________________________________________________________________________ -->
 
+
+
+
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="common.css">
@@ -59,9 +63,11 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+
 <div class="row-content">
 
-    <div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+<div class="row top-buffer">	
 
 
             <!--  __________________________________________________________________________B E G I N    C O L U M N   A  ____________________________________________________________________________________ -->
@@ -94,9 +100,13 @@
 
             <!-- <img src="images/image_lobby.jpg" alt="CMHC LOBBY" width="500" height="415" border="0" align="middle" class="img-responsive"> -->
 
+
+
+
             <!--  __________________________________________________________________________E N D   C O L U M N   A ____________________________________________________________________________________ -->
 
 
+</div>
     </div>
     <!--#include virtual="include_universalfooter.html"-->
 </div>
