--- a/alcoholdrugs.html
+++ b/alcoholdrugs.html
@@ -60,9 +60,12 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+
 <div class="row-content">
 
-    <div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+<div class="row top-buffer">	
+
 
         <H1 class="H1">The Alcohol and other Drugs Counseling Program</H1>
 
