--- a/anger.html
+++ b/anger.html
@@ -20,40 +20,40 @@
    
    
    
-       <!-- Bootstrap -->
- <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="common.css">
-  
-  
-  
- <script src="js/jquery-3.1.1.min.js"></script>
-	<script src="js/bootstrap-toolkit.min.js"></script>
-	<link rel="icon"
-		  type="image/png"
-		  href="http://www.utexas.edu/favicon.ico">
-	<style>
-		body {
-			background-color:#ffffff;
-		}
-	</style>
-	<!-- :::::::::::::::::::::::::::::::: Google Tracking Code - CMHC :::::::::::::::::::::::::::::::::: -->
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-					(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		ga('create', 'UA-6365748-1', 'auto');
-		ga('require', 'linkid', 'linkid.js');
-		ga('send', 'pageview');
-
-	</script>
-	<!-- ::::::::::::::::::::::::::::::: End Google Tracking Code - CMHC ::::::::::::::::::::::::::::: -->
+ <!-- Bootstrap -->
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="common.css">
 
 
-	<script src="https://use.fontawesome.com/451ef792be.js"></script>
 
-	<meta name="google-site-verification" content="U8Xv3xRoch6d45f95HQs0SYDSh2u3x7JQpAV-ANPquU" />
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/bootstrap-toolkit.min.js"></script>
+    <link rel="icon"
+          type="image/png"
+          href="http://www.utexas.edu/favicon.ico">
+    <style>
+        body {
+            background-color:#ffffff;
+        }
+    </style>
+    <!-- :::::::::::::::::::::::::::::::: Google Tracking Code - CMHC :::::::::::::::::::::::::::::::::: -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-6365748-1', 'auto');
+        ga('require', 'linkid', 'linkid.js');
+        ga('send', 'pageview');
+
+    </script>
+    <!-- ::::::::::::::::::::::::::::::: End Google Tracking Code - CMHC ::::::::::::::::::::::::::::: -->
+
+
+    <script src="https://use.fontawesome.com/451ef792be.js"></script>
+
+    <meta name="google-site-verification" content="U8Xv3xRoch6d45f95HQs0SYDSh2u3x7JQpAV-ANPquU" />
 </head>
 <body>
 
@@ -61,10 +61,14 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
-<div class="row-content">
-<div class="container-fluid"><!-- (this starts the container-fluid tag) -->
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
 
-	<!-- ::::::::::::::::::::::::::::::::::::::::::::::::::::   Main Content   ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
+<div class="row-content">
+
+<div class="row top-buffer">	
+
+
+
 <H1 class="H1">Is Your Anger Out of Control?</H1>
 
 <span class="bodytext"><B>CMHC Business Hours:</B><BR>Monday thru Friday, 8:00am - 5:00pm
