--- a/assertiveness.html
+++ b/assertiveness.html
@@ -60,10 +60,11 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+
 <div class="row-content">
 
-	<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
-
+<div class="row top-buffer">	
 		<H1 class="H1">Learning to Be Assertive</H1>
 
 		<span class="bodytext"><B>CMHC Business Hours:</B><BR>Monday thru Friday, 8:00am - 5:00pm</span>
