--- a/charges.html
+++ b/charges.html
@@ -61,9 +61,11 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+
 <div class="row-content">
 
-    <div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+<div class="row top-buffer">	
 
         <H1 class="H1">CMHC Summary of Charges</H1>
 
