--- a/confidentiality.html
+++ b/confidentiality.html
@@ -20,39 +20,39 @@
 	<!--  __________________________________________________________________________E N D   P A G E    T I T L E    A N D    M E T A    T A G G I N G  ____________________________________________________________________________________ -->
 
 	<!-- Bootstrap -->
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="common.css">
 
 
 
-	<script src="js/jquery-3.1.1.min.js"></script>
-	<script src="js/bootstrap-toolkit.min.js"></script>
-	<link rel="icon"
-		  type="image/png"
-		  href="http://www.utexas.edu/favicon.ico">
-	<style>
-		body {
-			background-color:#ffffff;
-		}
-	</style>
-	<!-- :::::::::::::::::::::::::::::::: Google Tracking Code - CMHC :::::::::::::::::::::::::::::::::: -->
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-					(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/bootstrap-toolkit.min.js"></script>
+    <link rel="icon"
+          type="image/png"
+          href="http://www.utexas.edu/favicon.ico">
+    <style>
+        body {
+            background-color:#ffffff;
+        }
+    </style>
+    <!-- :::::::::::::::::::::::::::::::: Google Tracking Code - CMHC :::::::::::::::::::::::::::::::::: -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-		ga('create', 'UA-6365748-1', 'auto');
-		ga('require', 'linkid', 'linkid.js');
-		ga('send', 'pageview');
+        ga('create', 'UA-6365748-1', 'auto');
+        ga('require', 'linkid', 'linkid.js');
+        ga('send', 'pageview');
 
-	</script>
-	<!-- ::::::::::::::::::::::::::::::: End Google Tracking Code - CMHC ::::::::::::::::::::::::::::: -->
+    </script>
+    <!-- ::::::::::::::::::::::::::::::: End Google Tracking Code - CMHC ::::::::::::::::::::::::::::: -->
 
 
-	<script src="https://use.fontawesome.com/451ef792be.js"></script>
+    <script src="https://use.fontawesome.com/451ef792be.js"></script>
 
-	<meta name="google-site-verification" content="U8Xv3xRoch6d45f95HQs0SYDSh2u3x7JQpAV-ANPquU" />
+    <meta name="google-site-verification" content="U8Xv3xRoch6d45f95HQs0SYDSh2u3x7JQpAV-ANPquU" />
 </head>
 <body>
 
@@ -60,9 +60,12 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+
 <div class="row-content">
 
-	<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+<div class="row top-buffer">	
+
 
 		<H1 class="H1">Confidentiality</H1>
 
