--- a/integratedhealth.html
+++ b/integratedhealth.html
@@ -58,9 +58,11 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+
 <div class="row-content">
 
-	<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+<div class="row top-buffer">
 
 		<H1 class="H1">Integrated Health Program (IHP)</H1>
 
