--- a/mbl_audio2.html
+++ b/mbl_audio2.html
@@ -63,14 +63,16 @@
 <!--#include virtual="include_universalheader.html"-->
 
 
-	
+<div class="row-content">
+
+<div class="row top-buffer">		
 	
 	
     <!--  __________________________________________________________________________B E G I N    C O L U M N   A  ____________________________________________________________________________________ -->
     
 
 
-</div>	  	    
+  	    
  <center></BR><span class="cap">MUSCLE RELAXATION</span></BR></BR>   
 <audio controls autoplay controls="controls">
   <source src="mindbodylabpage/files/Muscle Relaxation.mp3" type="audio/mpeg" autostart="true" loop="false" bgcolor="#263b51">
