--- a/mbl_audio6.html
+++ b/mbl_audio6.html
@@ -62,14 +62,15 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
-	
+<div class="row-content">
+
+<div class="row top-buffer">		
 	
 	
     <!--  __________________________________________________________________________B E G I N    C O L U M N   A  ____________________________________________________________________________________ -->
     
 
-
-</div>	  	    
+	  	    
  <center></BR> <span class="cap">4-7-8 BREATH</span></BR></BR>  
 <audio controls autoplay controls="controls">
   <source src="mindbodylabpage/files/9 4-7-8 Breath.mp3" type="audio/mpeg" autostart="true" loop="false" bgcolor="#263b51">
