--- a/mbl_audio9.html
+++ b/mbl_audio9.html
@@ -62,14 +62,16 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
-	
+<div class="row-content">
+
+<div class="row top-buffer">		
 	
 	
     <!--  __________________________________________________________________________B E G I N    C O L U M N   A  ____________________________________________________________________________________ -->
     
 
 
-</div>	  	    
+	  	    
  <center></BR><span class="cap">SEATED MEDITATION</span></BR> </BR>  
 <audio controls autoplay controls="controls">
   <source src="mindbodylabpage/files/03 20 minute Sitting Meditation.mp3" type="audio/mpeg" autostart="true" loop="false" bgcolor="#263b51">
