--- a/mediainterview.html
+++ b/mediainterview.html
@@ -62,9 +62,11 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+
 <div class="row-content">
 
-    <div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+<div class="row top-buffer">
 
         <H1 class="H1">Media and Class Interviews</H1>
 
