--- a/search.html
+++ b/search.html
@@ -61,8 +61,11 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+
 <div class="row-content">
-<div class="container-fluid"><!-- (this starts the container-fluid tag) -->
+
+<div class="row top-buffer">
 
 
 <meta name = "format-detection" content = "telephone=no">
