--- a/staffveterans.html
+++ b/staffveterans.html
@@ -60,9 +60,11 @@
 
 <!--#include virtual="include_universalheader.html"-->
 
+<div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+
 <div class="row-content">
 
-    <div class="container-fluid"> <!-- (this starts the container-fluid tag) -->
+<div class="row top-buffer">
 
         <H1 class="H1">Returning Veteran Students Information <BR>for Faculty & Staff<BR></H1>
 
